fixes up #418
